<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/orange3">

    <EditText
        android:id="@+id/newTaskTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/newTaskTitleHint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingHorizontal="@dimen/padding"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/newTaskCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/newTaskCategoryHint"
        android:minHeight="48dp"
        android:paddingHorizontal="@dimen/padding"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTaskTitle" />

    <Button
        android:id="@+id/newTaskEDate"
        style="?android:spinnerStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/newTaskEDateHint"
        android:minHeight="48dp"
        android:onClick="openDatePicker"
        android:paddingHorizontal="@dimen/padding"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTaskCategory" />

    <Button
        android:id="@+id/newTaskETime"
        style="?android:spinnerStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/newTaskETimeHint"
        android:minHeight="48dp"
        android:paddingHorizontal="@dimen/padding"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTaskEDate" />

    <EditText
        android:id="@+id/newTaskDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/newTaskDescHint"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:paddingHorizontal="@dimen/padding"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTaskETime" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/bigMargin"
        android:text="@string/newTaskAddBtn"
        android:textSize="@dimen/bigTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTaskDesc" />

</androidx.constraintlayout.widget.ConstraintLayout>