<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange3"
    tools:context=".SettingsActivity">

    <Switch
        android:id="@+id/hideTasksSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:onClick="hideTasksS"
        android:padding="@dimen/padding"
        android:text="@string/hideTasks"
        android:textSize="@dimen/bigTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider1"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hideTasksSwitch" />

    <TextView
        android:id="@+id/categoryListTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:padding="@dimen/padding"
        android:text="@string/categoryTV"
        android:textColor="@color/black"
        android:textSize="@dimen/bigTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryRV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/newCategoryET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryListTV"
        app:layout_constraintVertical_bias="0.0">

    </androidx.recyclerview.widget.RecyclerView>

    <EditText
        android:id="@+id/newCategoryET"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/newCategoryHint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="@dimen/padding"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toStartOf="@+id/newCategoryBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/newCategoryBtn" />

    <ImageButton
        android:id="@+id/newCategoryBtn"
        android:layout_width="@dimen/btnSize"
        android:layout_height="@dimen/btnSize"
        android:backgroundTint="@color/orange1"
        android:onClick="addCategoryBtn"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/notificationTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/notificationTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:padding="@dimen/padding"
        android:text="@string/notificationTV"
        android:textColor="@color/black"
        android:textSize="@dimen/bigTextSize"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/fiveMinRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="radioBtns"
            android:text="@string/rb1"
            android:textSize="@dimen/textSize" />

        <RadioButton
            android:id="@+id/fifteenMinRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="radioBtns"
            android:text="@string/rb2"
            android:textSize="@dimen/textSize" />

        <RadioButton
            android:id="@+id/thirtyMinutesRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="radioBtns"
            android:text="@string/rb3"
            android:textSize="@dimen/textSize" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>