<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange3"
    tools:context=".TaskDetailsActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/bigMargin"
        android:elevation="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/orange2">

            <EditText
                android:id="@+id/titleET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/orange1"
                android:inputType="textPersonName"
                android:minHeight="50dp"
                android:paddingHorizontal="@dimen/bigPadding"
                android:textColor="@color/white"
                android:textSize="@dimen/veryBigTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/categoryTDTV"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/padding"
                android:text="@string/categoryTV"
                android:textColor="@color/black"
                android:textSize="@dimen/bigTextSize"
                app:layout_constraintBottom_toBottomOf="@+id/categoryET"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleET" />

            <EditText
                android:id="@+id/categoryET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="@dimen/padding"
                android:textColor="@color/black"
                android:textSize="@dimen/bigTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/categoryTDTV"
                app:layout_constraintTop_toBottomOf="@+id/titleET" />

            <TextView
                android:id="@+id/cDateTDTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:paddingStart="@dimen/padding"
                android:text="@string/cDateTV"
                android:textColor="@color/black"
                android:textSize="@dimen/bigTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categoryTDTV" />

            <TextView
                android:id="@+id/eDateTDTV"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/padding"
                android:text="@string/eDateTV"
                android:textColor="@color/black"
                android:textSize="@dimen/bigTextSize"
                app:layout_constraintBottom_toBottomOf="@+id/eDateBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cDateTDTV" />

            <Button
                android:id="@+id/eDateBtn"
                style="?android:spinnerStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:paddingHorizontal="@dimen/padding"
                android:textColor="@color/black"
                android:textSize="@dimen/bigTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/eDateTDTV"
                app:layout_constraintTop_toBottomOf="@+id/cDateTDTV" />

            <TextView
                android:id="@+id/eTimeTDTV"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/padding"
                android:text="@string/eTimeTV"
                android:textColor="@color/black"
                android:textSize="@dimen/bigTextSize"
                app:layout_constraintBottom_toBottomOf="@+id/eTimeBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eDateTDTV" />

            <Button
                android:id="@+id/eTimeBtn"
                style="?android:spinnerStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:paddingHorizontal="@dimen/padding"
                android:textColor="@color/black"
                android:textSize="@dimen/bigTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/eTimeTDTV"
                app:layout_constraintTop_toBottomOf="@+id/eDateTDTV" />

            <TextView
                android:id="@+id/descTDTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/padding"
                android:text="@string/descTV"
                android:textColor="@color/black"
                android:textSize="@dimen/bigTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eTimeTDTV" />

            <EditText
                android:id="@+id/descET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:padding="@dimen/padding"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descTDTV" />

            <ImageView
                android:id="@+id/attachmentImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/checkBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descET" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btnSize"
                android:layout_margin="@dimen/bigMargin"
                android:onClick="checkBox"
                android:text="@string/notification"
                android:textSize="@dimen/textSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/addAttachmentBtn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btnSize"
                android:layout_margin="@dimen/bigMargin"
                android:onClick="chooseImageFromDevice"
                android:text="@string/addBtn"
                android:textSize="@dimen/smallTextSize"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/editBtn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btnSize"
                android:layout_margin="@dimen/bigMargin"
                android:onClick="editBtn"
                android:text="@string/editBtn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>